--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "deploy": "fly deploy --remote-only",
     "dev": "remix dev",
     "start": "remix-serve build",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -b",
+    "testWatch": "vitest",
+    "test": "vitest run"
   },
   "dependencies": {
     "@prisma/client": "^4.8.1",
@@ -22,8 +24,10 @@
     "@remix-run/eslint-config": "^1.9.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "cypress": "^12.3.0",
     "eslint": "^8.27.0",
     "prisma": "^4.8.1",
+    "ts-standard": "^12.0.2",
     "typescript": "^4.8.4",
     "vitest": "^0.26.3"
   },
